# VECTORSENSE

./: .gitignore  Dockerfile  README.md  VECTORSENSE_COMPLETE_DOCUMENTATION.md  convert_cad.py  docker-compose.yml  launch_sim.sh  launch_sim_windows.ps1  master_reboot.ps1  physics_engine_pinn.py  ports.txt  project_overview.md  ps_list.txt  scada_network_sim.py  success_initiation.md  vectorsense.onnx  vectorsense_pinn_fp16.pt
vectorsense_dashboard/: index.html  package-lock.json  package.json
vectorsense_dashboard/src/: App.css  App.jsx  index.css  main.jsx
vectorsense_dashboard/src/components/: DroneSpecs.jsx  MissionControl.jsx  MitigationControl.jsx  SpatialTwin.jsx  SystemDiagnostics.jsx  ThreatEconomics.jsx
vectorsense_ws/: launch_v3.sh
vectorsense_ws/src/vectorsense_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vectorsense_ws/src/vectorsense_bridge/scripts/: apf_orchestrator.py  zmq_telemetry_bridge.py
vectorsense_ws/src/vectorsense_bringup/: CMakeLists.txt  package.xml
vectorsense_ws/src/vectorsense_bringup/launch/: vectorsense_demo.launch.py
vectorsense_ws/src/vectorsense_description/: CMakeLists.txt  package.xml
vectorsense_ws/src/vectorsense_description/meshes/: 180beam.stl  DroneFYDPBase.stl  Xbeam.stl  beam_mechanism.stl  mechanisam_fix.stl  motor_attachment.stl  top_plate.stl
vectorsense_ws/src/vectorsense_description/urdf/: drone.urdf  drone_high_fidelity.urdf  vectorsense.urdf
vectorsense_ws/src/vectorsense_drone_sim/: package.xml  setup.cfg  setup.py
vectorsense_ws/src/vectorsense_drone_sim/launch/: full_demo.launch.py
vectorsense_ws/src/vectorsense_drone_sim/scripts/: takeoff_hover.py
vectorsense_ws/src/vectorsense_drone_sim/urdf/: vectorsense.urdf.xacro
vectorsense_ws/src/vectorsense_drone_sim/worlds/: industrial_plant.sdf
vectorsense_ws/src/vectorsense_gazebo/: .clangd  CMakeLists.txt  package.xml
vectorsense_ws/src/vectorsense_gazebo/ide_stubs/: README.txt  zmq.hpp
vectorsense_ws/src/vectorsense_gazebo/ide_stubs/gz/math/: Vector3.hh
vectorsense_ws/src/vectorsense_gazebo/ide_stubs/gz/plugin/: Register.hh
vectorsense_ws/src/vectorsense_gazebo/ide_stubs/gz/sim/: System.hh
vectorsense_ws/src/vectorsense_gazebo/ide_stubs/gz/sim/components/: Model.hh  Name.hh  Pose.hh
vectorsense_ws/src/vectorsense_gazebo/ide_stubs/gz/transport/: Node.hh
vectorsense_ws/src/vectorsense_gazebo/ide_stubs/nlohmann/: json.hpp
vectorsense_ws/src/vectorsense_gazebo/ide_stubs/sdf/: Element.hh
vectorsense_ws/src/vectorsense_gazebo/launch/: vectorsense_demo.launch.py  vectorsense_full_demo.launch.py
vectorsense_ws/src/vectorsense_gazebo/src/: GasLeakPlugin.cpp
vectorsense_ws/src/vectorsense_gazebo/worlds/: chemical_plant_hazard.world  refinery_hazard.sdf
vectorsense_ws/src/vectorsense_intelligence/scripts/: acoustic_sim.py  apf_flight_controller.py  base_station.py  brain_node.py  collision_avoidance_cuda.py  docking_state_machine.py  edge_fallback_test.py  export_onnx.py  financial_physics_bridge.py  optical_flow_cuda.py  sensor_sim.py  sindy_calibration.py  spatial_twin_bridge.py  swarm_coordinator_cuda.py  thermal_sim.py  train_pinn.py  vectorsense_actuator_api.py  vectorsense_auditor.py  vectorsense_opc_gateway.py  vectorsense_pinn.py  vision_inference_node.py  vision_sim.py  vram_test.py
vectorsense_ws/src/vectorsense_megacomplex/: package.xml  setup.cfg  setup.py
vectorsense_ws/src/vectorsense_megacomplex/launch/: nci25_demo.launch.py
vectorsense_ws/src/vectorsense_megacomplex/scripts/: black_swan_demo.py
vectorsense_ws/src/vectorsense_megacomplex/urdf/: vectorsense_ghost.urdf.xacro
vectorsense_ws/src/vectorsense_megacomplex/vectorsense_megacomplex/: black_swan_demo.py  cuda_patrol_node.py
vectorsense_ws/src/vectorsense_megacomplex/worlds/: jamnagar_emulation.sdf
vectorsense_ws/src/vectorsense_safety/src/: heartbeat_monitor.py
vectorsense_ws/src/vectorsense_vision/src/: vision_inference_node.py
wescam-mx/: Wescam MX-10.SLDPRT  Wescam MX-10.STEP
zd975/FYP frame/: 180beam.SLDPRT  Assem1.SLDASM  DroneFYDPBase.SLDPRT  Xbeam.SLDPRT  beam_mechanism.SLDPRT  mechanisam_fix.SLDPRT  motor_attachment.SLDPRT  top_plate.SLDPRT
