<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vectorsense_bridge</name>
  <version>1.0.0</version>
  <description>ZeroMQ IPC Bridge connecting VectorSense Gazebo to external AI.</description>
  <maintainer email="sourish@example.com">Sourish Senapati</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>setuptools</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-zmq</exec_depend>
  <exec_depend>python3-msgpack</exec_depend>
  <exec_depend>python3-lz4</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
