<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vectorsense_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for the VectorSense industrial inspection system.</description>
  <maintainer email="sourish@example.com">Sourish Senapati</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>vectorsense_bridge</exec_depend>
  <exec_depend>vectorsense_gazebo</exec_depend>
  <exec_depend>vectorsense_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
