<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vectorsense_gazebo</name>
  <version>1.0.0</version>
  <description>Simulation environment for VectorSense industrial drone.</description>
  <maintainer email="sourish@example.com">Sourish Senapati</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz_sim</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>gz_math_vendor</depend>
  <depend>gz_plugin_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
